--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@typesaurus/react": "^6.0.1",
     "antd-mobile": "^5.36.0",
+    "antd-mobile-icons": "^0.3.0",
     "firebase": "^10.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
