--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.38",
     "react-test-renderer": "^18.3.1",
+    "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
