--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd-mobile": "^5.36.0",
     "antd-mobile-icons": "^0.3.0",
     "firebase": "^10.12.2",
+    "framer-motion": "^11.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
