--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "antd-mobile-icons": "^0.3.0",
     "firebase": "^10.12.3",
     "framer-motion": "^11.2.13",
+    "modern-rembg": "^0.1.2",
+    "onnxruntime-web": "^1.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
